# Category-Promotion-Analysis

./: .gitignore  README.md
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_runs.py
backend/app/core/: config.py  logging.py
backend/app/db/: deps.py  models.py  session.py
backend/app/schemas/: result.py  run.py
backend/app/services/: analyze.py  ingest.py
backend/app/tests/: confest.py  conftest.py  test_analyze.py  test_health.py  test_root.py  test_runs.py  test_upload.py
sample_data/: sample_promos.csv
